--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Projects#new</h1>
 <p>Find me in app/views/projects/new.html.erb</p>
 
-<%= form_for :project do |f| %>
+<%= form_for @project, url: {action: "create"} do |f| %>
   Wall height: <%= f.number_field :wall_height %><br />
   Wall perimiter : <%= f.number_field :wall_perimiter %><br />
   Area to exclude height : <%= f.number_field :area_to_exclude_height %><br />
