added foundation gem
styled main page and some of the form

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,15 +1,15 @@
-<h1<!DOCTYPE html>
-<html>
-<body>
-  <h1>Welcome to My Projecto</h1>
-  <div> 
-    <p>Please select language | Por favor escoja lenguaje</p>
-    <form method="get" action="/new" class="button_to">
-      <div><input value="English" type="submit" /></div>
-    </form>
-    <form method="get" action="/new" class="button_to">
-      <div><input value="Español" type="submit" /></div>
-    </form>
+
+  <div class="container">
+    <div class="row">
+      <div id="main" class="small-12 large-centered columns">
+        <h1>Welcome to My Projecto</h1>
+        <p>Please select language | Por favor escoja lenguaje</p>
+        <form method="get" action="/new" class="button_to">
+          <div><input value="English" type="submit" /></div>
+        </form>
+        <form method="get" action="/new" class="button_to">
+          <div><input value="Español" type="submit" /></div>
+        </form>
+      </div>  
+    </div>
   </div>
-</body>
-</html>
