--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,10 +5,10 @@
     <div id="main" class="small-12 large-centered columns">
       <h1>Welcome to My Projecto</h1>
       <p>Please select language | Por favor escoja lenguaje</p>
-      <form method="get" action="/new" class="button_to">
+      <form method="get" action="/projects/new" class="button_to">
         <div><input value="English" type="submit" /></div>
       </form>
-      <form method="get" action="/new" class="button_to">
+      <form method="get" action="/projects/new" class="button_to">
         <div><input value="Español" type="submit" /></div>
       </form>
     </div>  
