--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -5,8 +5,10 @@
     <div id="main" class="small-12 large-centered columns">
       <h1>Projects#new</h1>
       <%= form_for @project, url: {action: "create"} do |f| %>
-        Wall height: <%= f.number_field :wall_height %><br />
+       <%= t('hello') %> <%= f.number_field :wall_height %><br />
         Wall perimiter : <%= f.number_field :wall_perimiter %><br />
+        <!-- Simple Form syntax.  Gives you label, input, and in-line errors -->
+        <!-- f.input :area_to_exclude_height -->
         Area to exclude height : <%= f.number_field :area_to_exclude_height %><br />
         Area to exclude length : <%= f.number_field :area_to_exclude_perimiter %><br />
         Sheet height : <%= f.number_field :sheet_height %><br />
