added results table
added I18 support for project results, and measuring sample image

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,17 @@
   text-align: center;
  }
 
+.main_title {
+  text-align: center;
+}
 .drop1 ul { 
   text-align: center;
+}
+
+table {
+  text-align: center;
+}
+
+.dimensions {
+  padding-top: 50px;
 }
