--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,8 @@
 
-
+<h1 class="main_title">Projecto</h1>
 <div class="container">
  <div class="row">
     <div id="main" class="small-12 large-centered columns">
-      <h1>My Projecto</h1>
       <button href="#" data-dropdown="drop1" aria-controls="drop1" aria-expanded="false" class="button dropdown">Select Language  |  Escoja Lenguaje</button><br>
       <ul id="drop1" data-dropdown-content class="f-dropdown" aria-hidden="true" tabindex="-1">
         <% supported_languages = {'English' => 'en', 'Español' => 'es'} %>
