--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,11 @@
-<h1 class="main_title">Projecto</h1>
+<header class="full-width header-area">
+    <div class="row">
+        <div class="large-12 columns">
+            <h1><a href="/">Projecto</a></h1>
+        </div>
+    </div>
+</header> 
+
 <div class="container">
   <div class="row">
     <div id="main" class="small-4 columns">
@@ -20,3 +27,10 @@
   </div>
 </div>
 
+<div class="full-width footer-area">
+    <div class="row">
+        <div class="large-12 columns" id="copyright">
+            &copy; DB 2014
+        </div>
+    </div>
+</div>
