--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,7 @@
 <header class="full-width header-area">
     <div class="row">
         <div class="large-12 columns">
-            <h1>Projecto</h1>
+            <h1><a href="/">Projecto</a></h1>
         </div>
     </div>
 </header> 
