--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -9,13 +9,14 @@
 <div class="container">
   <div class="row">
     <div id="main" class="small-4 columns">
+      <!-- simple_form below allows for better mapping of I18n translation dictionaries -->
       <%= simple_form_for @project do |f| %>
         <%= f.input :wall_height %>
         <%= f.input :wall_perimiter %>
         <%= f.input :area_to_exclude_height, required: false %>
         <%= f.input :area_to_exclude_perimiter, required: false %>
         <%= f.input :sheet_width,
-          collection: [4] %>
+                    collection: [4] %>
         <%= f.input :sheet_height, collection: [8, 10, 12]%>
         <%= f.input :sheet_cost %>
         <%= f.button :submit%>
