updated some notes
notes updated to be more specific

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="row">
     <div id="main" class="small-4 columns">
-      <!-- simple_form below allows for better mapping of I18n translation dictionaries -->
+      <!-- simple_form below allows for better mapping of I18n translation dictionaries, can be used in varied ways -->
       <%= simple_form_for @project do |f| %>
         <%= f.input :wall_height %>
         <%= f.input :wall_perimiter %>
